@property added to TODO

--- a/posts/Python/classes.ipynb
+++ b/posts/Python/classes.ipynb
@@ -8,6 +8,7 @@
     "## TODO\n",
     "- private variables\n",
     "- descriptors\n",
+    "- @property\n",
     "- method resolution order (also for multiple inheritance like class Third(First, Second), see below)\n",
     "- getattr, hasattr, isinstance, vars, \\_\\_dict\\_\\_, \\_\\_get\\_\\_, \\_\\_set\\_\\_, \\_\\_getattr\\_\\_, \\_\\_getattribute\\_\\_, and others\n",
     "- staticmethod, classmethod, dataclass\n",
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "87cbc2df",
    "metadata": {},
    "outputs": [
@@ -47,10 +48,12 @@
    "source": [
     "class C:\n",
     "    def f(self):\n",
-    "        print('inside f')\n",
+    "        print(\"inside f\")\n",
+    "\n",
     "\n",
     "def g():\n",
-    "    print('inside g')\n",
+    "    print(\"inside g\")\n",
+    "\n",
     "\n",
     "c = C()\n",
     "c.g = g\n",
@@ -74,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "b5c48b45",
    "metadata": {},
    "outputs": [
@@ -90,8 +93,10 @@
     "class C:\n",
     "    pass\n",
     "\n",
+    "\n",
     "def f(x):\n",
     "    print(\"hello\")\n",
+    "\n",
     "\n",
     "c = C()\n",
     "# print(type(c.f))  # AttributeError: 'C' object has no attribute 'f'\n",
@@ -136,20 +141,29 @@
    "source": [
     "class A:\n",
     "    def m(self):\n",
-    "        print('inside A')\n",
+    "        print(\"inside A\")\n",
+    "\n",
     "\n",
     "class B:\n",
     "    def m(self):\n",
-    "        print('inside B')\n",
+    "        print(\"inside B\")\n",
     "\n",
-    "class X(A, B): pass\n",
     "\n",
-    "class Y(B, A): pass\n",
+    "class X(A, B):\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "class Y(B, A):\n",
+    "    pass\n",
+    "\n",
     "\n",
     "X().m()\n",
     "Y().m()\n",
     "\n",
-    "class Z(X, Y): pass  # TypeError: Cannot create a consistent method resolution order (MRO) for bases A, B\n",
+    "\n",
+    "class Z(X, Y):\n",
+    "    pass  # TypeError: Cannot create a consistent method resolution order (MRO) for bases A, B\n",
+    "\n",
     "\n",
     "Z().m()"
    ]
@@ -164,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "a4d340ce",
    "metadata": {},
    "outputs": [],
@@ -178,7 +192,8 @@
     "        for item in iterable:\n",
     "            self.items_list.append(item)\n",
     "\n",
-    "    __update = update   # private copy of original update() method\n",
+    "    __update = update  # private copy of original update() method\n",
+    "\n",
     "\n",
     "class MappingSubclass(Mapping):\n",
     "\n",
@@ -191,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "7aa3cd55",
    "metadata": {},
    "outputs": [],
@@ -204,6 +219,7 @@
     "    def update(self, iterable):\n",
     "        for item in iterable:\n",
     "            self.items_list.append(item)\n",
+    "\n",
     "\n",
     "class MappingSubclass(Mapping):\n",
     "\n",
