super() and MRO to TODO

--- a/posts/Python/classes.ipynb
+++ b/posts/Python/classes.ipynb
@@ -16,7 +16,8 @@
     "- But instances only understand attribute references; two kinds: data atributes and methods\n",
     "- https://docs.python.org/3.11/tutorial/classes.html\n",
     "- \"Clients should use data attributes (of class instances, pozn. redakce) with care - clients may mess up invariants maintained by the methods by stamping on their data attributes.\"\n",
-    "- \"Any function object that is a class attribute defines a method for instances of that class.\""
+    "- \"Any function object that is a class attribute defines a method for instances of that class.\"\n",
+    "- super() does not mean \"call my parent class\" - it means \"call the next class in the MRO\""
    ]
   },
   {
