My work before GPT

--- a/posts/Python/graphs.ipynb
+++ b/posts/Python/graphs.ipynb
@@ -21,29 +21,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
+   "id": "bafd08c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from abc import ABC, abstractmethod\n",
+    "from dataclasses import dataclass\n",
+    "from typing import Tuple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "87a20123",
    "metadata": {},
    "outputs": [],
    "source": [
+    "@dataclass(frozen=True)\n",
     "class Node:\n",
-    "    \"\"\"Basic node to be used in graphs.\"\"\"\n",
+    "    \"\"\"Basic immutable graph node.\"\"\"\n",
     "\n",
-    "    def __init__(self, name):\n",
-    "        \"\"\"Assumes name is a string.\"\"\"\n",
-    "        self._name = name\n",
+    "    _name: str\n",
     "\n",
     "    def get_name(self):\n",
     "        \"\"\"Returns node name.\"\"\"\n",
-    "        return self._name\n",
-    "\n",
-    "    def __str__(self):\n",
-    "        \"\"\"Represents node by its name.\"\"\"\n",
-    "        return self._name\n",
-    "\n",
-    "    def __eq__(self, other):\n",
-    "        \"\"\"Two nodes are equal if their names are equal.\"\"\"\n",
-    "        return self._name == other._name"
+    "        return self._name"
    ]
   },
   {
@@ -51,181 +54,194 @@
    "id": "41cc8296",
    "metadata": {},
    "source": [
-    "I decided to implement edges as two different classes that don't inherit from each other, because I think one isn't a special case of another. I mean, perhaps it is, but methods on both will differ so substantially, that it doesn't make sense to me to have them be connected. This is because of the substitution principle: A code that works on a superclass must work on a subclass. But if a code works on bidirectional edges (perhaps exploiting symmetry) it may not work on unidirectional edges (where the symmetry doesn't exist). So, if anything, bidirectional edge must inherit from unidirectional edge. But that doesn't work either, because unidirectional edge logically must have the methods get_source and get_destination, but bidirectional edge cannot have these methods. bidirectional edges don't have sources or destination because both nodes could work as such. And which node should be returned by a bidirectional edge's get_source method? There is no clear answer, so I conclude both types of edges cannot inherit from each other in any way. The only solution would be to completely discard bidirectional edges and only work with directional ones - after all, we can build undirected graph with directed edges - but that would prevent me from having this fun :). Unfortunately, a lot of code is then duplicated."
+    "Designing the inheritance pattern is difficult to me here. The substitution principle: A code that works on a superclass must work on a subclass. But if a code works on bidirectional edges (perhaps exploiting symmetry) it may not work on unidirectional edges (where the symmetry doesn't exist). So, if anything, bidirectional edge must inherit from unidirectional edge. But that doesn't work either, because unidirectional edge logically must have the sources and destinations, but bidirectional edge cannot have them. Which node should be returned by a bidirectional edge's \"source\" property? There is no clear answer, so I conclude bidirectional edge cannot inherit from unidirectional. Together these two facts mean neither can inherit from the other.\\\n",
+    "\n",
+    "One solution would be to completely discard bidirectional edges and only work with directional ones - after all, we can build undirected graph with directed edges. But that would mean, while building an undirected graph, that we treat unidirectional edges as bidirectional, which is weird."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "17a258a3",
+   "execution_count": 3,
+   "id": "d8a0b822",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Edge:\n",
-    "    \"\"\"Basic unweighted bidirectional edge.\"\"\"\n",
+    "class BaseEdge(ABC):\n",
+    "    \"\"\"Abstract base class for edge.\"\"\"\n",
     "\n",
-    "    def __init__(self, node1, node2):\n",
-    "        \"\"\"Assumes node1 and node2 are Nodes.\"\"\"\n",
+    "    @abstractmethod\n",
+    "    def __init__(self, node1: Node, node2: Node, separator: str):\n",
     "        self._node1 = node1\n",
     "        self._node2 = node2\n",
+    "        self._separator = separator\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        sep = self._separator\n",
+    "        return f\"{self._node1.get_name()} {sep} {self._node2.get_name()}\"\n",
+    "\n",
+    "\n",
+    "class BaseWeightedEdge(BaseEdge):\n",
+    "    \"\"\"Abstract base class for weighted edge.\"\"\"\n",
+    "\n",
+    "    @abstractmethod\n",
+    "    def __init__(self, node1: Node, node2: Node, weight: int | float):\n",
+    "        BaseEdge.__init__(self, node1, node2, \"\")\n",
+    "        self._weight = weight\n",
+    "\n",
+    "    def get_weight(self):\n",
+    "        return self._weight\n",
+    "\n",
+    "\n",
+    "class Edge(BaseEdge):\n",
+    "    \"\"\"Unweighted bidirectional edge.\"\"\"\n",
+    "\n",
+    "    def __init__(self, node1: Node, node2: Node):\n",
+    "        \"\"\"Assumes node1 and node2 are Nodes.\"\"\"\n",
+    "        BaseEdge.__init__(self, node1, node2, \"<---->\")\n",
     "\n",
     "    def get_nodes(self):\n",
     "        \"\"\"Returns both nodes as a tuple.\"\"\"\n",
     "        return self._node1, self._node2\n",
     "\n",
-    "    def __str__(self):\n",
-    "        \"\"\"Textual representation of the edge.\"\"\"\n",
-    "        node1, node2 = self.get_nodes()\n",
-    "        return f\"{node1.get_name()} <----> {node2.get_name()}\"\n",
-    "\n",
     "    def __eq__(self, other):\n",
     "        \"\"\"Two Edges are equal if they have the same nodes (order doesn't matter).\"\"\"\n",
-    "        return set(self.get_nodes()) == set(other.get_nodes())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5a8e0e6e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class WeightedEdge(Edge):\n",
+    "        if isinstance(other, Edge):\n",
+    "            return set(self.get_nodes()) == set(other.get_nodes())\n",
+    "        return False\n",
+    "\n",
+    "\n",
+    "class WeightedEdge(BaseWeightedEdge, Edge):\n",
     "    \"\"\"Weighted bidirectional edge.\"\"\"\n",
     "\n",
-    "    def __init__(self, node1, node2, weight=1):\n",
+    "    def __init__(self, node1: Node, node2: Node, weight: int | float = 1):\n",
     "        \"Assumes node1 and node2 are Nodes.\"\n",
-    "        super().__init__(node1, node2)\n",
-    "        self._weight = weight\n",
-    "\n",
-    "    def get_weight(self):\n",
-    "        \"\"\"Returns weight of the edge.\"\"\"\n",
-    "        return self._weight\n",
-    "\n",
-    "    def __str__(self):\n",
-    "        node1, node2 = self.get_nodes()\n",
-    "        return f\"{node1.get_name()} <--({self.get_weight()})--> {node2.get_name()}\"\n",
+    "        BaseWeightedEdge.__init__(self, node1, node2, weight)\n",
+    "        self._separator = f\"<--({self.get_weight()})-->\"\n",
     "\n",
     "    def __eq__(self, other):\n",
-    "        weights_equal = self.get_weight() == other.get_weight()\n",
-    "        return super().__eq__(other) and weights_equal"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3119ca9f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class DirectedEdge:\n",
-    "    \"\"\"Basic unweighted unidirectional edge.\"\"\"\n",
+    "        if isinstance(self, WeightedEdge):\n",
+    "            weights_equal = self.get_weight() == other.get_weight()\n",
+    "            return Edge.__eq__(self, other) and weights_equal\n",
+    "        return False\n",
     "\n",
-    "    def __init__(self, src, dest):\n",
+    "\n",
+    "class DirectedEdge(BaseEdge):\n",
+    "    \"\"\"Unweighted unidirectional edge.\"\"\"\n",
+    "\n",
+    "    def __init__(self, src: Node, dest: Node):\n",
     "        \"\"\"Assumes src and dest are Nodes.\"\"\"\n",
-    "        self._src = src\n",
-    "        self._dest = dest\n",
+    "        # maintaines the invariant that src=node1 and dest=node2\n",
+    "        BaseEdge.__init__(self, src, dest, \"---->\")\n",
     "\n",
     "    def get_src(self):\n",
     "        \"\"\"Returns src.\"\"\"\n",
-    "        return self._src\n",
+    "        return self._node1\n",
     "\n",
     "    def get_dest(self):\n",
     "        \"\"\"Returns dest.\"\"\"\n",
-    "        return self._dest\n",
-    "\n",
-    "    def __str__(self):\n",
-    "        \"\"\"Textual representation of the edge.\"\"\"\n",
-    "        return f\"{self._src.get_name()} ----> {self._dest.get_name()}\"\n",
+    "        return self._node2\n",
     "\n",
     "    def __eq__(self, other):\n",
-    "        \"\"\"Two Edges are equal if both source and destinations are the same.\"\"\"\n",
-    "        sources_equal = self.get_src() == other.get_src()\n",
-    "        destinations_equal = self.get_dest() == other.get_dest()\n",
-    "        return sources_equal and destinations_equal"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "433b49e8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class WeightedDirectedEdge(DirectedEdge):\n",
+    "        \"\"\"Two DirectedEdges are equal if sources equal and destinations equal.\"\"\"\n",
+    "        if isinstance(self, DirectedEdge):\n",
+    "            sources_equal = self.get_src() == other.get_src()\n",
+    "            destinations_equal = self.get_dest() == other.get_dest()\n",
+    "            return sources_equal and destinations_equal\n",
+    "        return False\n",
+    "\n",
+    "\n",
+    "class WeightedDirectedEdge(BaseWeightedEdge, DirectedEdge):\n",
     "    \"\"\"Weighted unidirectional edge.\"\"\"\n",
     "\n",
-    "    def __init__(self, src, dest, weight=1):\n",
+    "    def __init__(self, src: Node, dest: Node, weight: int | float = 1):\n",
     "        \"\"\"Assumes src and dest Nodes, weight a number.\"\"\"\n",
-    "        super().__init__(src, dest)\n",
-    "        self._weight = weight\n",
-    "\n",
-    "    def get_weight(self):\n",
-    "        \"\"\"Returns weight of the edge.\"\"\"\n",
-    "        return self._weight\n",
-    "\n",
-    "    def __str__(self):\n",
-    "        \"\"\"Textual representation of the edge.\"\"\"\n",
-    "        src, dest = self.get_src(), self.get_dest()\n",
-    "        return f\"{src.get_name()} --({self.get_weight()})--> {dest.get_name()}\"\n",
+    "        BaseWeightedEdge.__init__(self, src, dest, weight)\n",
+    "        self._separator = f\"--({self.get_weight()})-->\"\n",
     "\n",
     "    def __eq__(self, other):\n",
-    "        weights_equal = self.get_weight() == other.get_weight()\n",
-    "        return super().__eq__(other) and weights_equal"
+    "        \"\"\"Two WeightedDirectedEdges are equal if also their weights are equal, in addition to sources and destinations.\"\"\"\n",
+    "        if isinstance(self, WeightedDirectedEdge):\n",
+    "            weights_equal = self.get_weight() == other.get_weight()\n",
+    "            return DirectedEdge.__eq__(self, other) and weights_equal\n",
+    "        return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3602e5ee",
+   "execution_count": 4,
+   "id": "ea3c0db4",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n"
+      "False\n"
      ]
     }
    ],
    "source": [
-    "class C:\n",
+    "# BaseEdge()\n",
+    "node1 = Node(\"1\")\n",
+    "node2 = Node(\"2\")\n",
     "\n",
-    "    def __init__(self):\n",
-    "        self.x = 1\n",
-    "\n",
-    "    def f(self):\n",
-    "        print(self.x)\n",
-    "\n",
-    "\n",
-    "class B(C):\n",
-    "    def __init__(self):\n",
-    "        self.x = 2\n",
-    "\n",
-    "\n",
-    "B().f()"
+    "print(node1 == node2)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "9cf97167",
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4d6f872e",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "So perhaps the inheritance schema can be as follows:\n",
-    "\n",
-    "- BaseEdge <- BaseWeightedEdge <- WeightedEdge\n",
-    "- ___________________________________<- WeightedDirectionalEdge\n",
-    "- ___________<- Edge\n",
-    "- ___________<- DirectionalEdge\n",
-    "\n",
-    "\n",
-    "BaseEdge would implement \\_\\_str\\_\\_ (with empty separator string), and attributes node1 and node2, BaseWeightedEdge would implement get_weight and perhaps \\_\\_eq\\_\\_"
+    "edgeA = Edge(node1, node2)\n",
+    "w_edgeA = WeightedEdge(node1, node2, 3.14)\n",
+    "dir_edgeA = DirectedEdge(node1, node2)\n",
+    "wdir_edgeA = WeightedDirectedEdge(node1, node2, 3.14)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "32858237",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edgeB = Edge(node2, node1)\n",
+    "w_edgeB = WeightedEdge(node2, node1, 3.14)\n",
+    "dir_edgeB = DirectedEdge(node2, node1)\n",
+    "wdir_edgeB = WeightedDirectedEdge(node2, node1, 3.14)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b9d8f755",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "edgeA == edgeB = True\n",
+      "w_edgeA == w_edgeB = True\n",
+      "dir_edgeA == dir_edgeB = False\n",
+      "wdir_edgeA == wdir_edgeB = False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"{edgeA == edgeB = }\")\n",
+    "print(f\"{w_edgeA == w_edgeB = }\")\n",
+    "print(f\"{dir_edgeA == dir_edgeB = }\")\n",
+    "print(f\"{wdir_edgeA == wdir_edgeB = }\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea3c0db4",
+   "id": "6e611245",
    "metadata": {},
    "outputs": [],
    "source": []
