First working version finished

--- a/posts/Python/graphs.ipynb
+++ b/posts/Python/graphs.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "bafd08c9",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "87a20123",
    "metadata": {},
    "outputs": [],
@@ -42,11 +42,10 @@
     "class Node:\n",
     "    \"\"\"Basic immutable graph node.\"\"\"\n",
     "\n",
-    "    _name: str\n",
+    "    name: str\n",
     "\n",
-    "    def get_name(self):\n",
-    "        \"\"\"Returns node name.\"\"\"\n",
-    "        return self._name"
+    "    def __str__(self) -> str:\n",
+    "        return self.name"
    ]
   },
   {
@@ -54,121 +53,171 @@
    "id": "41cc8296",
    "metadata": {},
    "source": [
-    "Designing the inheritance pattern is difficult to me here. The substitution principle: A code that works on a superclass must work on a subclass. But if a code works on bidirectional edges (perhaps exploiting symmetry) it may not work on unidirectional edges (where the symmetry doesn't exist). So, if anything, bidirectional edge must inherit from unidirectional edge. But that doesn't work either, because unidirectional edge logically must have the sources and destinations, but bidirectional edge cannot have them. Which node should be returned by a bidirectional edge's \"source\" property? There is no clear answer, so I conclude bidirectional edge cannot inherit from unidirectional. Together these two facts mean neither can inherit from the other.\\\n",
+    "Designing the inheritance pattern is difficult to me here. The substitution principle: A code that works on a superclass must work on a subclass. But if a code works on bidirectional edges (perhaps exploiting symmetry) it may not work on unidirectional edges (where the symmetry doesn't exist). So, if anything, bidirectional edge must inherit from unidirectional edge. But that doesn't work either, because unidirectional edge logically must have the sources and destinations, but bidirectional edge cannot have them. Which node should be returned by a bidirectional edge's \"source\" property? There is no clear answer, so I conclude bidirectional edge cannot inherit from unidirectional. Together these two facts mean neither can inherit from the other.\n",
     "\n",
     "One solution would be to completely discard bidirectional edges and only work with directional ones - after all, we can build undirected graph with directed edges. But that would mean, while building an undirected graph, that we treat unidirectional edges as bidirectional, which is weird."
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7e1836b1",
+   "metadata": {},
+   "source": [
+    "BaseEdge is a abstract base class for edges. An edge has two nodes, node1 and node2, can return them in a tuple (.nodes) and can be represented by a string where names of both nodes are separated by a separator. Also is hashable, which means it implements \\_\\_eq\\_\\_ and \\_\\_hash\\_\\_ methods.\n",
+    "_separator, \\_\\_eq\\_\\_ and \\_\\_hash\\_\\_ are abstract methods. Their implementation depends on whether the edge is bidirectional or unidirectional."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0228894d",
+   "metadata": {},
+   "source": [
+    "@ property means accessing `.nodes` on in instance will call this *method*, which works as a getter. It also blocks setting the attribute (via `.nodes = something`). But it doesn't block its mutation, were it e.g. a list."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "d8a0b822",
    "metadata": {},
    "outputs": [],
    "source": [
     "class BaseEdge(ABC):\n",
-    "    \"\"\"Abstract base class for edge.\"\"\"\n",
+    "    \"\"\"Abstract base class for graph edge.\"\"\"\n",
     "\n",
-    "    @abstractmethod\n",
-    "    def __init__(self, node1: Node, node2: Node, separator: str):\n",
+    "    def __init__(self, node1: Node, node2: Node):\n",
     "        self._node1 = node1\n",
     "        self._node2 = node2\n",
-    "        self._separator = separator\n",
     "\n",
-    "    def __str__(self):\n",
-    "        sep = self._separator\n",
-    "        return f\"{self._node1.get_name()} {sep} {self._node2.get_name()}\"\n",
+    "    @property\n",
+    "    def nodes(self) -> Tuple[Node, Node]:\n",
+    "        return self._node1, self._node2\n",
     "\n",
+    "    @property\n",
+    "    @abstractmethod\n",
+    "    def _separator(self) -> str:\n",
+    "        pass\n",
     "\n",
-    "class BaseWeightedEdge(BaseEdge):\n",
-    "    \"\"\"Abstract base class for weighted edge.\"\"\"\n",
+    "    def __str__(self) -> str:\n",
+    "        node1, node2 = self.nodes\n",
+    "        return f\"{node1} {self._separator} {node2}\"\n",
     "\n",
     "    @abstractmethod\n",
-    "    def __init__(self, node1: Node, node2: Node, weight: int | float):\n",
-    "        BaseEdge.__init__(self, node1, node2, \"\")\n",
-    "        self._weight = weight\n",
+    "    def __eq__(self, other) -> bool:\n",
+    "        pass\n",
     "\n",
-    "    def get_weight(self):\n",
-    "        return self._weight\n",
+    "    @abstractmethod\n",
+    "    def __hash__(self) -> int:\n",
+    "        pass\n",
     "\n",
     "\n",
     "class Edge(BaseEdge):\n",
-    "    \"\"\"Unweighted bidirectional edge.\"\"\"\n",
+    "    \"\"\"Bidirectional unweighted graph edge.\"\"\"\n",
     "\n",
     "    def __init__(self, node1: Node, node2: Node):\n",
-    "        \"\"\"Assumes node1 and node2 are Nodes.\"\"\"\n",
-    "        BaseEdge.__init__(self, node1, node2, \"<---->\")\n",
+    "        BaseEdge.__init__(self, node1, node2)\n",
     "\n",
-    "    def get_nodes(self):\n",
-    "        \"\"\"Returns both nodes as a tuple.\"\"\"\n",
-    "        return self._node1, self._node2\n",
+    "    @property\n",
+    "    def _separator(self) -> str:\n",
+    "        return \"<---->\"\n",
     "\n",
-    "    def __eq__(self, other):\n",
-    "        \"\"\"Two Edges are equal if they have the same nodes (order doesn't matter).\"\"\"\n",
-    "        if isinstance(other, Edge):\n",
-    "            return set(self.get_nodes()) == set(other.get_nodes())\n",
-    "        return False\n",
+    "    def __eq__(self, other) -> bool:\n",
+    "        if not isinstance(other, Edge):\n",
+    "            return False\n",
+    "        return {*self.nodes} == {*other.nodes}\n",
     "\n",
-    "\n",
-    "class WeightedEdge(BaseWeightedEdge, Edge):\n",
-    "    \"\"\"Weighted bidirectional edge.\"\"\"\n",
-    "\n",
-    "    def __init__(self, node1: Node, node2: Node, weight: int | float = 1):\n",
-    "        \"Assumes node1 and node2 are Nodes.\"\n",
-    "        BaseWeightedEdge.__init__(self, node1, node2, weight)\n",
-    "        self._separator = f\"<--({self.get_weight()})-->\"\n",
-    "\n",
-    "    def __eq__(self, other):\n",
-    "        if isinstance(self, WeightedEdge):\n",
-    "            weights_equal = self.get_weight() == other.get_weight()\n",
-    "            return Edge.__eq__(self, other) and weights_equal\n",
-    "        return False\n",
+    "    def __hash__(self) -> int:\n",
+    "        return hash(frozenset(self.nodes))\n",
     "\n",
     "\n",
     "class DirectedEdge(BaseEdge):\n",
-    "    \"\"\"Unweighted unidirectional edge.\"\"\"\n",
+    "    \"\"\"Unidirectional unweighted graph edge.\"\"\"\n",
     "\n",
     "    def __init__(self, src: Node, dest: Node):\n",
-    "        \"\"\"Assumes src and dest are Nodes.\"\"\"\n",
-    "        # maintaines the invariant that src=node1 and dest=node2\n",
-    "        BaseEdge.__init__(self, src, dest, \"---->\")\n",
+    "        # maintains the invariant that src=node1 and dest=node2\n",
+    "        BaseEdge.__init__(self, src, dest)\n",
     "\n",
-    "    def get_src(self):\n",
-    "        \"\"\"Returns src.\"\"\"\n",
+    "    @property\n",
+    "    def src(self) -> Node:\n",
     "        return self._node1\n",
     "\n",
-    "    def get_dest(self):\n",
-    "        \"\"\"Returns dest.\"\"\"\n",
+    "    @property\n",
+    "    def dest(self) -> Node:\n",
     "        return self._node2\n",
     "\n",
-    "    def __eq__(self, other):\n",
-    "        \"\"\"Two DirectedEdges are equal if sources equal and destinations equal.\"\"\"\n",
-    "        if isinstance(self, DirectedEdge):\n",
-    "            sources_equal = self.get_src() == other.get_src()\n",
-    "            destinations_equal = self.get_dest() == other.get_dest()\n",
-    "            return sources_equal and destinations_equal\n",
-    "        return False\n",
+    "    @property\n",
+    "    def _separator(self) -> str:\n",
+    "        return \">---->\"\n",
+    "\n",
+    "    def __eq__(self, other) -> bool:\n",
+    "        if not isinstance(other, DirectedEdge):\n",
+    "            return False\n",
+    "        sources_equal = self.src == other.src\n",
+    "        destinations_equal = self.dest == other.dest\n",
+    "        return sources_equal and destinations_equal\n",
+    "\n",
+    "    def __hash__(self) -> int:\n",
+    "        return hash(self.nodes)\n",
     "\n",
     "\n",
-    "class WeightedDirectedEdge(BaseWeightedEdge, DirectedEdge):\n",
-    "    \"\"\"Weighted unidirectional edge.\"\"\"\n",
+    "class WeightedEdgeMixin:\n",
+    "    \"\"\"Mixin adding the ability for edges to have weights.\"\"\"\n",
     "\n",
-    "    def __init__(self, src: Node, dest: Node, weight: int | float = 1):\n",
-    "        \"\"\"Assumes src and dest Nodes, weight a number.\"\"\"\n",
-    "        BaseWeightedEdge.__init__(self, src, dest, weight)\n",
-    "        self._separator = f\"--({self.get_weight()})-->\"\n",
+    "    def __init__(self, weight: int | float):\n",
+    "        self._weight = weight\n",
     "\n",
-    "    def __eq__(self, other):\n",
-    "        \"\"\"Two WeightedDirectedEdges are equal if also their weights are equal, in addition to sources and destinations.\"\"\"\n",
-    "        if isinstance(self, WeightedDirectedEdge):\n",
-    "            weights_equal = self.get_weight() == other.get_weight()\n",
-    "            return DirectedEdge.__eq__(self, other) and weights_equal\n",
-    "        return False"
+    "    @property\n",
+    "    def weight(self) -> int | float:\n",
+    "        return self._weight\n",
+    "\n",
+    "\n",
+    "class WeightedEdge(Edge, WeightedEdgeMixin):\n",
+    "    \"\"\"Weighted bidirectional graph edge.\"\"\"\n",
+    "\n",
+    "    def __init__(self, node1: Node, node2: Node, weight: int | float):\n",
+    "        Edge.__init__(self, node1, node2)\n",
+    "        WeightedEdgeMixin.__init__(self, weight)\n",
+    "\n",
+    "    @property\n",
+    "    def _separator(self) -> str:\n",
+    "        return f\"<--({self.weight})-->\"\n",
+    "\n",
+    "    def __eq__(self, other) -> bool:\n",
+    "        if not isinstance(other, WeightedEdge):\n",
+    "            return False\n",
+    "        weights_equal = self.weight == other.weight\n",
+    "        return Edge.__eq__(self, other) and weights_equal\n",
+    "\n",
+    "    def __hash__(self) -> int:\n",
+    "        return hash((frozenset(self.nodes), self.weight))\n",
+    "\n",
+    "\n",
+    "class WeightedDirectedEdge(DirectedEdge, WeightedEdgeMixin):\n",
+    "    \"\"\"Weighted unidirectional graph edge.\"\"\"\n",
+    "\n",
+    "    def __init__(self, src: Node, dest: Node, weight: int | float):\n",
+    "        DirectedEdge.__init__(self, src, dest)\n",
+    "        WeightedEdgeMixin.__init__(self, weight)\n",
+    "\n",
+    "    @property\n",
+    "    def _separator(self) -> str:\n",
+    "        return f\">--({self.weight})-->\"\n",
+    "\n",
+    "    def __eq__(self, other) -> bool:\n",
+    "        if not isinstance(other, WeightedDirectedEdge):\n",
+    "            return False\n",
+    "        sources_equal = self.src == other.src\n",
+    "        destinations_equal = self.dest == other.dest\n",
+    "        weights_equal = self.weight == other.weight\n",
+    "        return sources_equal and destinations_equal and weights_equal\n",
+    "\n",
+    "    def __hash__(self) -> int:\n",
+    "        return hash((self.nodes, self.weight))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "ea3c0db4",
    "metadata": {},
    "outputs": [
@@ -190,33 +239,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "4d6f872e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "edgeA = Edge(node1, node2)\n",
-    "w_edgeA = WeightedEdge(node1, node2, 3.14)\n",
-    "dir_edgeA = DirectedEdge(node1, node2)\n",
-    "wdir_edgeA = WeightedDirectedEdge(node1, node2, 3.14)"
+    "edge12 = Edge(node1, node2)\n",
+    "w_edge12_314 = WeightedEdge(node1, node2, 3.14)\n",
+    "dir_edge12 = DirectedEdge(node1, node2)\n",
+    "wdir_edge12_314 = WeightedDirectedEdge(node1, node2, 3.14)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "32858237",
    "metadata": {},
    "outputs": [],
    "source": [
-    "edgeB = Edge(node2, node1)\n",
-    "w_edgeB = WeightedEdge(node2, node1, 3.14)\n",
-    "dir_edgeB = DirectedEdge(node2, node1)\n",
-    "wdir_edgeB = WeightedDirectedEdge(node2, node1, 3.14)"
+    "edge21 = Edge(node2, node1)\n",
+    "w_edge21_314 = WeightedEdge(node2, node1, 3.14)\n",
+    "dir_edge21 = DirectedEdge(node2, node1)\n",
+    "wdir_edge21_314 = WeightedDirectedEdge(node2, node1, 3.14)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
+   "id": "35db1597",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w_edge12_3 = WeightedEdge(node1, node2, 3)\n",
+    "wdir_edge12_3 = WeightedDirectedEdge(node1, node2, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b9d8f755",
    "metadata": {},
    "outputs": [
@@ -224,24 +284,100 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "edgeA == edgeB = True\n",
-      "w_edgeA == w_edgeB = True\n",
-      "dir_edgeA == dir_edgeB = False\n",
-      "wdir_edgeA == wdir_edgeB = False\n"
+      "1 <----> 2 equals 2 <----> 1 is True\n",
+      "1 <--(3.14)--> 2 equals 2 <--(3.14)--> 1 is True\n",
+      "1 >----> 2 equals 2 >----> 1 is False\n",
+      "1 >--(3.14)--> 2 equals 2 >--(3.14)--> 1 is False\n",
+      "1 <--(3.14)--> 2 equals 1 <--(3)--> 2 is False\n",
+      "1 >--(3.14)--> 2 equals 1 >--(3)--> 2 is False\n"
      ]
     }
    ],
    "source": [
-    "print(f\"{edgeA == edgeB = }\")\n",
-    "print(f\"{w_edgeA == w_edgeB = }\")\n",
-    "print(f\"{dir_edgeA == dir_edgeB = }\")\n",
-    "print(f\"{wdir_edgeA == wdir_edgeB = }\")"
+    "print(f\"{edge12} equals {edge21} is {edge12 == edge21}\")\n",
+    "print(f\"{w_edge12_314} equals {w_edge21_314} is {w_edge12_314 == w_edge21_314}\")\n",
+    "print(f\"{dir_edge12} equals {dir_edge21} is {dir_edge12 == dir_edge21}\")\n",
+    "print(\n",
+    "    f\"{wdir_edge12_314} equals {wdir_edge21_314} is {wdir_edge12_314 == wdir_edge21_314}\"\n",
+    ")\n",
+    "print(f\"{w_edge12_314} equals {w_edge12_3} is {w_edge12_314 == w_edge12_3}\")\n",
+    "print(f\"{wdir_edge12_314} equals {wdir_edge12_3} is {wdir_edge12_314 == wdir_edge12_3}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "eca858a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{<__main__.Edge at 0x2ded0bd9e80>}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{edge12, edge21}  # exactly what we wanted because they are the same edge!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "cf0a6dbb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{<__main__.WeightedEdge at 0x2ded0bda3c0>}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{w_edge12_314, w_edge21_314}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "682a8f06",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{<__main__.C at 0x2ded0bade50>, <__main__.C at 0x2ded0bd86e0>}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class C:\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "c1 = C()\n",
+    "c2 = C()\n",
+    "\n",
+    "{c1, c2}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e611245",
+   "id": "1f3dedd0",
    "metadata": {},
    "outputs": [],
    "source": []
